--- a/documentation/document/template-2/References/references.bib
+++ b/documentation/document/template-2/References/references.bib
@@ -2,9 +2,9 @@
 % SAMPLE BIBLIOGRAPHY FILE
 % ------------------------------------------------------------------------
 
-@MISC{prime-number-theorem,
-   author = "Charles Louis Xavier Joseph de la Vall{\'e}e Poussin",
-   note = "A strong form of the prime number theorem, 19th century" }
+%@MISC{prime-number-theorem,
+%   author = "Charles Louis Xavier Joseph de la Vall{\'e}e Poussin",
+%   note = "A strong form of the prime number theorem, 19th century" }
 
 % ------------------------------------------------------------------------
 
@@ -20,6 +20,12 @@
    publisher = "Addison-Wesley",
    year = 1986 }
 
+@BOOK{RR73,
+ author= "H. Radjavi and P. Rosenthal",
+ title="Invariant {Subspaces}",
+ publisher="Springer-Verlag",
+ address="New York",
+ year=1973 }
 % ------------------------------------------------------------------------
 
 @BOOK{RR73,
