--- a/documentation/document/template-2/Abstract/abstract.tex
+++ b/documentation/document/template-2/Abstract/abstract.tex
@@ -5,7 +5,10 @@
 %\begin{abstractslong}    %uncommenting this line, gives a different abstract heading
 \begin{abstracts}        %this creates the heading for the abstract page
 
-This is where you write your abstract ...
+The invariant observer is an approach to implement an alternative hardware realization of the invariant operation
+published in the paper \textbf{Runtime Verification of Embedded Real Time Systems.}
+The invariant observer monitors at every clock cycle a signal $\phi$ from a Runtime Verification Unit and 
+determines whether the signal is in an active state in the last $\tau$ clock cycles.
 
 
 \end{abstracts}
