--- a/documentation/document/template-2/thesis.tex
+++ b/documentation/document/template-2/thesis.tex
@@ -107,8 +107,10 @@
 \include{Appendix1/appendix1}
 \include{Appendix2/appendix2}
 
-\bibliographystyle{plainnat}
-%\bibliographystyle{Classes/CUEDbiblio}
+%\bibliographystyle{plainnat}
+%\bibliographystyle{alpha}
+%\bibliographystyle{abbrv}
+\bibliographystyle{Classes/CUEDbiblio}
 %\bibliographystyle{Classes/jmb}
 %\bibliographystyle{Classes/jmb} % bibliography style
 \renewcommand{\bibname}{References} % changes default name Bibliography to References
