Written first Section of chapter one - Introduction

--- a/documentation/document/Bachelor-Thesis/References/references.bib
+++ b/documentation/document/Bachelor-Thesis/References/references.bib
@@ -1,20 +1,37 @@
 % ------------------------------------------------------------------------
 % MY BIBLIOGRAPHY FILE
 % ------------------------------------------------------------------------
-@incollection{
-year={2013},
-isbn={978-3-642-35631-5},
+@incollection{RTFMBJ13,
 booktitle={Runtime Verification},
+title={Real-Time Runtime Verification on Chip},
+author={Reinbacher, Thomas and Függer, Matthias and Brauer, Jörg},
+year={2013},
+publisher={Springer Berlin Heidelberg},
+%isbn={978-3-642-35631-5},
 volume={7687},
 series={Lecture Notes in Computer Science},
 editor={Qadeer, Shaz and Tasiran, Serdar},
-doi={10.1007/978-3-642-35632-2_13},
-title={Real-Time Runtime Verification on Chip},
-url={http://dx.doi.org/10.1007/978-3-642-35632-2_13},
-publisher={Springer Berlin Heidelberg},
-author={Reinbacher, Thomas and Függer, Matthias and Brauer, Jörg},
+%doi={10.1007/978-3-642-35632-2_13},
+%url={http://dx.doi.org/10.1007/978-3-642-35632-2_13},
 pages={110-125}
 }
+
+@article{210306,
+author={Ravn, A.P. and Rischel, H. and Hansen, K.M.},
+journal={Software Engineering, IEEE Transactions on},
+title={Specifying and verifying requirements of real-time systems},
+year={1993},
+month={Jan},
+volume={19},
+number={1},
+pages={41-55}%,
+%abstract={An approach to specification of requirements and verification of design for real-time systems is presented. A system is defined by a conventional mathematical model for a dynamic system where application specific states denote functions of real time. Specifications are formulas in duration calculus, a real-time interval logic, where predicates define durations of states. Requirements define safety and functionality constraints on the system or a component. A top-level design is given by a control law: a predicate that defines an automation controlling the transition between phases of operation. Each phase maintains certain relations among the system states; this is analogous to the control functions known from conventional control theory. The top-level design is decomposed into an architecture for a distributed system with specifications for sensor, actuator, and program components. Programs control the distributed computation through synchronous events. Sensors and actuators relate events with system states. Verification is a deduction showing that a design implies requirements},
+%keywords={formal specification;formal verification;real-time systems;temporal logic;actuator;control law;distributed computation;duration calculus;mathematical model;real-time interval logic;real-time systems;sensor;specification of requirements;synchronous events;top-level design;verification of design;Actuators;Automatic control;Calculus;Control systems;Design automation;Logic;Mathematical model;Real time systems;Safety;Sensor systems},
+%doi={10.1109/32.210306},
+%ISSN={0098-5589},
+}
+
+
 
 % ------------------------------------------------------------------------
 % SAMPLE BIBLIOGRAPHY FILE
